Fix overflow in edit assessment page

--- a/src/views/EditAry/RightPanel/Score/styles.scss
+++ b/src/views/EditAry/RightPanel/Score/styles.scss
@@ -40,6 +40,7 @@ $width-table: 320px;
     >.content {
         display: flex;
         flex-grow: 1;
+        overflow: auto;
 
         .right {
             overflow-y: auto;
